events page images

--- a/events.html
+++ b/events.html
@@ -86,7 +86,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/cob.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/cob.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Banjo - Clash of Bands</span>
@@ -104,7 +104,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/games.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/games.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Games</span>
@@ -181,7 +181,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/raag.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/raag.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4" style="font-size:20px">Raag - Singing Competition</span>
@@ -200,7 +200,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/antakshari.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/antakshari.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4" style="font-size:20px">Sa-Re-Ga-Ma-Pa Antakshari</span>
@@ -221,7 +221,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/fashion.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/fashion.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Mirage - Fashion Show</span>
@@ -241,7 +241,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/movie.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/movie.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4" style="font-size:17px">Drishyam - Mobile Movie making</span>
@@ -277,7 +277,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/CULTURAL/comic.jpeg">
+		   				     <img class="activator" src="images2/CULTURAL/comic.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Gudgudi - The Comic Act</span>
@@ -298,7 +298,7 @@
 		   		<div class="col m3 s6">
 		   			<div class="card">
 		   			   <div class="card-image waves-effect waves-block waves-light">
-		   			     <img class="activator" src="images2/CULTURAL/hasya.jpeg">
+		   			     <img class="activator" src="images2/CULTURAL/hasya.jpg">
 		   			   </div>
 		   			   <div class="card-content">
 		   			     <span class="card-title activator grey-text text-darken-4">Hasya Kavi</span>
@@ -319,7 +319,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/techno.png">
+		   				     <img class="activator" src="images2/TECHNICAL/techno.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Technical Quiz</span>
@@ -343,7 +343,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/rag.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/rag.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Rag To Rich</span>
@@ -351,7 +351,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Rag To Rich<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Useful Model has to be created with the unused/ garbage components provided.</p>
+		   				     <p> Useful Model has to be created with the unused/ garbage components provided.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -361,7 +361,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/bid.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/bid.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Biding C Quiz</span>
@@ -369,7 +369,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Biding C Quiz<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>It is a 1 day programming event. <br>
+		   				     <p> It is a 1 day programming event. <br>
 		   				     C programming quiz.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -380,7 +380,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/lan.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/lan.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">LAN Games</span>
@@ -388,7 +388,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">LAN Games<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>There will be 3 games. It is a single day event.</p>
+		   				     <p> There will be 3 games. It is a single day event.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -401,7 +401,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/hack.png">
+		   				     <img class="activator" src="images2/TECHNICAL/hack.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Hack Fest</span>
@@ -410,7 +410,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Hack Fest<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Will be held in computer labs. <br>
+		   				     <p> Will be held in computer labs. <br>
 		   				     Networking with programming.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
@@ -422,7 +422,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/robo.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/robo.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Robo Race</span>
@@ -430,7 +430,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Robo Race<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Near AB-3</p>
+		   				     <p> Near AB-3</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -440,7 +440,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/circuit.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/circuit.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Circuit Designing</span>
@@ -448,7 +448,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Circuit Designing<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>1 day event. <br> In Electrical labs. <br>
+		   				     <p> 1 day event. <br> In Electrical labs. <br>
 		   				     Teams from outside KEC will also be invited.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -459,7 +459,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/debug.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/bug.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Code Debugging</span>
@@ -467,7 +467,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Code Debugging<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Debug code errors in C, Java, C#</p>
+		   				     <p> Debug code errors in C, Java, C#</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -480,7 +480,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/web.png">
+		   				     <img class="activator" src="images2/TECHNICAL/web.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Web Developer</span>
@@ -489,7 +489,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Web Developer<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Will be held in computer labs.</p>
+		   				     <p> Will be held in computer labs.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -500,7 +500,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/load.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/load.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Bear Your Load</span>
@@ -508,7 +508,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Bear Your Load<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Participant has to balance the load of components.</p>
+		   				     <p> Participant has to balance the load of components.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -518,7 +518,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/cad.png">
+		   				     <img class="activator" src="images2/TECHNICAL/cad.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Auto CAD</span>
@@ -526,7 +526,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Auto CAD<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>In CAD Lab.</p>
+		   				     <p> In CAD Lab.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -536,7 +536,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/bridge.png">
+		   				     <img class="activator" src="images2/TECHNICAL/bridge.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Build a bridge</span>
@@ -544,7 +544,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Build a bridge<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>In civil Lab</p>
+		   				     <p> In civil Lab</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -555,7 +555,7 @@
 		   			<div class="col m3 s6">
 		   				<div class="card">
 		   				   <div class="card-image waves-effect waves-block waves-light">
-		   				     <img class="activator" src="images2/TECHNICAL/idea.jpeg">
+		   				     <img class="activator" src="images2/TECHNICAL/idea.jpg">
 		   				   </div>
 		   				   <div class="card-content">
 		   				     <span class="card-title activator grey-text text-darken-4">Idea Presentation</span>
@@ -563,7 +563,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Idea Presentation<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> <b>INTRO: </b>Present Your Idea</p>
+		   				     <p> Present Your Idea</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
