Some Changes in team page

--- a/team.html
+++ b/team.html
@@ -88,7 +88,7 @@
             <td>Technical</td>
           </tr>
 		  <tr>
-            <td> </td>
+            <td>Ms. Vishu Tyagi</td>
             <td>Designing</td>
           </tr>
           <tr>
@@ -235,10 +235,10 @@
           <tr>
             <td>Deepak singh</td>
             <td>ME</td>
-            <td>All Events Coordinator</td>
+            <td>FEST Events Coordinator</td>
           </tr>
 		  <tr>  <td> Kshitiz Tripathi</td>
-            <td>ME</td>
+            <td>CSE</td>
             <td>Cultural Co.</td>
           </tr>
           <tr><td>Divyanshi Roy</td>
@@ -246,7 +246,7 @@
             <td>Cultural Co.</td>
           </tr>
           <tr><td>Rohan Singh</td>
-            <td>CSE</td>
+            <td>ME</td>
             <td>Cultural Co.</td></tr>
           <tr><td>Satish Padnani</td>
             <td>CSE</td>
